@@ -1,3 +1,5 @@
+* Fix typo in activity launching code. (marco)
+
 Snapshot e23f012e08
 
 * Launch a few activities outside rainbow containers. (marco)
